# justkeepswimming

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  releaserc.toml  requirements.txt
.github/workflows/: build.yml  publish.yml  release.yml
docs/: DAG_VISUALIZER.md
src/: __main__.py  game.py
src/components/: clock.py  dispatcher.py  input.py  physics.py  render.py  sizing.py  stage.py  window.py
src/datatypes/: dag.py
src/ecs/: __init__.py  scheduler.py
src/justkeepswimming/: __init__.py  __main__.py  build.py  main.py  prelude.py
src/justkeepswimming/backgrounds/: mines.py  oceans.py  tropical.py
src/justkeepswimming/characters/: spear.py  turtle.py
src/justkeepswimming/components/: animation.py  filter.py  font.py  health.py  input.py  physics.py  player.py  position.py  pseudo.py  render.py  sizing.py  sprite.py  tile.py  ui.py
src/justkeepswimming/datatypes/: dag.py  version.py
src/justkeepswimming/debug/: args.py  options.py  profiler.py  scopes.py  viewer.py
src/justkeepswimming/debug/processors/: __init__.py  button.py  physics.py  rendering.py
src/justkeepswimming/ecs/: __init__.py  scheduler.py
src/justkeepswimming/modules/: clock.py  dispatcher.py  game.py  stage.py  window.py
src/justkeepswimming/prefabs/: background.py  button.py  cameras.py  characters.py  physics.py  player.py  renderable.py  sprites.py  text.py
src/justkeepswimming/processors/: animation.py  button.py  camera.py  filter.py  font.py  health.py  input.py  physics.py  position.py  render.py  sizing.py  sprite.py  tile.py  ui.py
src/justkeepswimming/scenes/: __init__.py  default.py  game.py  menu.py
src/justkeepswimming/systems/: camera.py  cameras.py  clock.py  dispatcher.py  engine.py  input.py  render.py  sizing.py  sprite.py  stage.py  window.py
src/justkeepswimming/utilities/: animation.py  character.py  context.py  custom_event.py  dag_visualizer.py  image.py  launch.py  maid.py  prefab.py  rendering.py  scene.py  signal.py  transform.py
src/modules/: clock.py  stage.py  window.py
src/prefabs/: cameras.py
src/scenes/: __init__.py  default.py
src/systems/: cameras.py  render.py  sizing.py
src/utilities/: context.py  ecs.py  maid.py  prefab.py  scene.py  signal.py
src/utils/: scene.py  signal.py  stage.py
templates/spritesheets/: template.xcf
templates/spritesheets/characters/: spear.xcf  turtle.xcf
