[project]
name = "justkeepswimming"
version = "0.0.0"
description = "A small game about a fish in the deep sea."

readme = "README.md"
license = "GPL-3.0"

requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "psutil>=7.2.2",
    "pygame-ce>=2.5.6",
    "rich>=14.3.1",
]

[tool.uv.sources]
nuitka = { git = "https://github.com/Nuitka/Nuitka" }

[dependency-groups]
bump = [
    "python-semantic-release>=10.5.3"
]

build = [
    "imageio>=2.37.2",
    "nuitka",
    "toml>=0.10.2",
]
dev = [
    "matplotlib>=3.10.8",
    "autopep8>=2.3.2",
    "black>=26.1.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pycodestyle>=2.14.0",
    "pylint>=4.0.4",
    "types-psutil>=7.2.1.20260116",
    "types-toml>=0.10.8.20240310",
]

[project.scripts]
play = "justkeepswimming.main:main"
build = "justkeepswimming.build:main"
profiler-generate-summary = "justkeepswimming.debug.viewer:cli_summary"
profiler-generate-frame-summary = "justkeepswimming.debug.viewer:cli_frame"

[tool.nuitka]
standalone = true
enable-plugin = ["pygame"]

[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"
